Replaced LinkedIn badge with custom badge

--- a/index.html
+++ b/index.html
@@ -80,8 +80,17 @@
 
                 <!-- Social Media Links -->
                 <div class="social-links">
-                    <!-- LinkedIn Badge -->
-                    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="dylan-van-rooyen-it" data-version="v1"></div>
+                    <!-- Custom LinkedIn Badge -->
+                    <a href="https://www.linkedin.com/in/dylan-van-rooyen-it/" target="_blank" rel="noopener noreferrer" class="linkedin-badge">
+                        <div class="linkedin-badge-header">
+                            <svg viewBox="0 0 24 24" aria-hidden="true" class="linkedin-icon"><g><path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.25 6.5 1.75 1.75 0 016.5 8.25zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.62 1.62 0 0013 14.19V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"></path></g></svg>
+                        </div>
+                        <div class="linkedin-badge-body">
+                            <img src="assets/images/DylanLinkedIn.jpg" alt="Dylan van Rooyen" class="linkedin-badge-photo">
+                            <span class="linkedin-badge-name">Dylan van Rooyen</span>
+                            <span class="linkedin-badge-button">View profile</span>
+                        </div>
+                    </a>
                     
                     <!-- Custom X (Twitter) Badge -->
                     <a href="https://x.com/dylanvr13" target="_blank" rel="noopener noreferrer" class="x-badge">
@@ -109,7 +118,5 @@
 
     <!-- Link to custom JavaScript file -->
     <script src="assets/js/main.js"></script>
-    <!-- LinkedIn Badge Script -->
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 </html>
