--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <svg viewBox="0 0 24 24" aria-hidden="true" class="linkedin-icon"><g><path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.25 6.5 1.75 1.75 0 016.5 8.25zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.62 1.62 0 0013 14.19V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"></path></g></svg>
                         </div>
                         <div class="linkedin-badge-body">
-                            <img src="assets/images/DylanBW.jpg" alt="Dylan van Rooyen" class="linkedin-badge-photo">
+                            <img src="assets/images/DylanLinkedIn.jpg" alt="Dylan van Rooyen" class="linkedin-badge-photo">
                             <span class="linkedin-badge-name">Dylan van Rooyen</span>
                             <span class="linkedin-badge-button">View profile</span>
                         </div>
@@ -98,8 +98,8 @@
                             <svg viewBox="0 0 24 24" aria-hidden="true" class="github-icon"><g><path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12c0 4.418 2.865 8.166 6.839 9.489.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.031-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.82c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.026 2.747-1.026.546 1.378.203 2.397.1 2.65.64.7 1.03 1.595 1.03 2.688 0 3.848-2.338 4.695-4.566 4.942.359.308.678.92.678 1.852 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.001 10.001 0 0022 12c0-5.523-4.477-10-10-10z"></path></g></svg>
                         </div>
                         <div class="github-badge-body">
-                            <img src="assets/images/DylanBW.jpg" alt="Dylan van Rooyen" class="github-badge-photo">
-                            <span class="github-badge-handle">dylanvanrooyen</span>
+                            <img src="assets/images/DylanGithub.jpg" alt="Dylan van Rooyen" class="github-badge-photo">
+                            <span class="github-badge-handle">DylanvanRooyen</span>
                             <span class="github-badge-button">View profile</span>
                         </div>
                     </a>
