--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dylan van Rooyen - Developer</title>
+
+    <!-- SEO and Open Graph Meta Tags -->
+    <meta name="description" content="The professional portfolio for Dylan van Rooyen, a skilled Web Developer, Python Programmer, and Data Analyst.">
+    
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dylanvanrooyen.com/">
+    <meta property="og:title" content="Dylan van Rooyen - Developer Portfolio">
+    <meta property="og:description" content="Explore the projects and skills of Dylan van Rooyen, a passionate developer specializing in web technologies, Python, and data analysis.">
+    <meta property="og:image" content="https://dylanvanrooyen.com/assets/images/favicon.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://dylanvanrooyen.com/">
+    <meta property="twitter:title" content="Dylan van Rooyen - Developer Portfolio">
+    <meta property="twitter:description" content="Explore the projects and skills of Dylan van Rooyen, a passionate developer specializing in web technologies, Python, and data analysis.">
+    <meta property="twitter:image" content="https://dylanvanrooyen.com/assets/images/favicon.png">
+    <link rel="icon" href="assets/images/favicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600;700&display=swap" rel="stylesheet">
