Amended to be more mobile friendly and added a custom cursor

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+    <!-- Custom Cursor Elements -->
+    <div class="cursor-dot"></div>
+    <div class="cursor-outline"></div>
 
     <!-- Header & Navigation -->
     <header class="main-header">
@@ -39,6 +42,8 @@
                 <img src="assets/images/DylanBW.jpg" alt="Dylan van Rooyen Headshot" class="header-headshot">
                 <a href="#" class="logo">DvR</a>
             </div>
+
+            <!-- Desktop Navigation -->
             <nav class="main-nav">
                 <ul>
                     <li><a href="#hero">Home</a></li>
@@ -46,8 +51,27 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+
+            <!-- Mobile Navigation Burger Icon -->
+            <div class="burger-menu">
+                <div class="burger-line"></div>
+                <div class="burger-line"></div>
+                <div class="burger-line"></div>
+            </div>
         </div>
     </header>
+
+    <!-- Mobile Navigation Overlay -->
+    <div class="mobile-nav-overlay">
+        <nav class="mobile-nav">
+            <ul>
+                <li><a href="#hero">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+
 
     <main>
         <!-- Hero Section -->
