Improve page title, meta description, and image alt text

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dylan van Rooyen - Developer</title>
+    <title>Dylan van Rooyen - Web Developer & Python Programmer</title>
 
     <!-- SEO and Open Graph Meta Tags -->
-    <meta name="description" content="The professional portfolio for Dylan van Rooyen, a skilled Web Developer, Python Programmer, and Data Analyst.">
+    <meta name="description" content="Explore the portfolio of Dylan van Rooyen, a professional Web Developer and Python Programmer specializing in dynamic web applications and data analysis. View my projects.">
     
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
@@ -39,7 +39,7 @@
         <div class="container">
             
             <div class="logo-container">
-                <img src="assets/images/DylanBW.jpg" alt="Dylan van Rooyen Headshot" class="header-headshot">
+                <img src="assets/images/DylanBW.jpg" alt="Headshot of Dylan van Rooyen - Web Developer" class="header-headshot">
                 <a href="#" class="logo">DvR</a>
             </div>
 
