--- a/stock-dashboard/index.html
+++ b/stock-dashboard/index.html
@@ -30,10 +30,11 @@
             <div class="flex flex-col sm:flex-row justify-between items-center">
                 <div>
                     <h1 class="text-2xl sm:text-3xl font-bold text-slate-900">Stock Analysis Dashboard</h1>
-                    <p class="text-sm text-slate-500 mt-1">Enter a stock ticker to visualize data and projections.</p>
+                    <p class="text-sm text-slate-500 mt-1">Enter a stock ticker or name to visualize data.</p>
                 </div>
                 <div class="flex items-stretch mt-4 sm:mt-0 w-full sm:w-auto">
-                    <input type="text" id="tickerInput" class="w-full sm:w-40 uppercase px-4 py-2 border border-stone-300 rounded-l-lg focus:outline-none focus:ring-2 focus:ring-amber-500" placeholder="e.g., AAPL">
+                    <!-- MODIFIED: Removed 'uppercase' class and updated placeholder -->
+                    <input type="text" id="tickerInput" class="w-full sm:w-48 px-4 py-2 border border-stone-300 rounded-l-lg focus:outline-none focus:ring-2 focus:ring-amber-500" placeholder="e.g., AAPL or Apple">
                     <button id="getDataBtn" class="bg-amber-500 hover:bg-amber-600 text-white font-bold py-2 px-6 rounded-r-lg transition-colors duration-300">
                         Analyze
                     </button>
@@ -99,7 +100,7 @@
                 <path vector-effect="non-scaling-stroke" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
             </svg>
             <h3 class="mt-2 text-lg font-medium text-slate-900">Welcome to the Dashboard</h3>
-            <p class="mt-1 text-sm text-slate-500">Please enter a stock ticker above (e.g., AAPL, MSFT, GOOGL) to begin.</p>
+            <p class="mt-1 text-sm text-slate-500">Please enter a stock ticker or name (e.g., AAPL, Microsoft) to begin.</p>
         </div>
 
     </div>
