Better SEO for page refrencing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- SEO and Open Graph Meta Tags -->
     <meta name="description" content="Explore the portfolio of Dylan van Rooyen, a professional Web Developer and Python Programmer specializing in dynamic web applications and data analysis. View my projects.">
+    <link rel="canonical" href="https://dylanvanrooyen.com/" />
     
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
@@ -40,15 +41,15 @@
             
             <div class="logo-container">
                 <img src="assets/images/DylanBW.jpg" alt="Headshot of Dylan van Rooyen - Web Developer" class="header-headshot">
-                <a href="#" class="logo">DvR</a>
+                <a href="https://dylanvanrooyen.com/" class="logo">DvR</a>
             </div>
 
             <!-- Desktop Navigation -->
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#hero">Home</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://dylanvanrooyen.com/#hero">Home</a></li>
+                    <li><a href="https://dylanvanrooyen.com/#projects">Projects</a></li>
+                    <li><a href="https://dylanvanrooyen.com/#contact">Contact</a></li>
                 </ul>
             </nav>
 
@@ -65,9 +66,9 @@
     <div class="mobile-nav-overlay">
         <nav class="mobile-nav">
             <ul>
-                <li><a href="#hero">Home</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://dylanvanrooyen.com/#hero">Home</a></li>
+                <li><a href="https://dylanvanrooyen.com/#projects">Projects</a></li>
+                <li><a href="https://dylanvanrooyen.com/#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -81,7 +82,7 @@
                     <h1 id="hero-title">Hi, I'm Dylan van Rooyen.</h1>
                     <!-- This paragraph will have the typing effect -->
                     <p class="subtitle">I'm a <span id="typing-effect"></span><span id="cursor">|</span></p>
-                    <a href="#projects" class="btn">View My Work</a>
+                    <a href="https://dylanvanrooyen.com/#projects" class="btn">View My Work</a>
                 </div>
             </div>
         </section>
