--- a/stock-dashboard/index.html
+++ b/stock-dashboard/index.html
@@ -25,15 +25,21 @@
 
     <div id="app" class="container mx-auto p-4 sm:p-6 lg:p-8">
         
+        <!-- Back Button -->
+        <div class="mb-4">
+            <a href="../index.html" class="text-sm text-amber-600 hover:text-amber-700 font-medium transition-colors duration-300">
+                &larr; Back to Portfolio
+            </a>
+        </div>
+
         <!-- Header and Controls -->
         <header class="bg-white rounded-xl shadow-md p-4 sm:p-6 mb-8">
             <div class="flex flex-col sm:flex-row justify-between items-center">
-                <div>
+                <div class="w-full text-center sm:text-left mb-4 sm:mb-0">
                     <h1 class="text-2xl sm:text-3xl font-bold text-slate-900">Stock Analysis Dashboard</h1>
                     <p class="text-sm text-slate-500 mt-1">Enter a stock ticker or name to visualize data.</p>
                 </div>
-                <div class="flex items-stretch mt-4 sm:mt-0 w-full sm:w-auto">
-                    <!-- MODIFIED: Removed 'uppercase' class and updated placeholder -->
+                <div class="flex items-stretch w-full max-w-xs sm:w-auto flex-shrink-0">
                     <input type="text" id="tickerInput" class="w-full sm:w-48 px-4 py-2 border border-stone-300 rounded-l-lg focus:outline-none focus:ring-2 focus:ring-amber-500" placeholder="e.g., AAPL or Apple">
                     <button id="getDataBtn" class="bg-amber-500 hover:bg-amber-600 text-white font-bold py-2 px-6 rounded-r-lg transition-colors duration-300">
                         Analyze
