Amended title and meta title property

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dylan van Rooyen - Web Developer & Python Programmer</title>
+    <title>Dylan van Rooyen - Portfolio</title>
 
     <!-- SEO and Open Graph Meta Tags -->
     <meta name="description" content="Explore the portfolio of Dylan van Rooyen, a professional Web Developer and Python Programmer specializing in dynamic web applications and data analysis. View my projects.">
@@ -12,7 +12,7 @@
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dylanvanrooyen.com/">
-    <meta property="og:title" content="Dylan van Rooyen - Developer Portfolio">
+    <meta property="og:title" content="Dylan van Rooyen - Portfolio">
     <meta property="og:description" content="Explore the projects and skills of Dylan van Rooyen, a passionate developer specializing in web technologies, Python, and data analysis.">
     <meta property="og:image" content="https://dylanvanrooyen.com/assets/images/favicon.png">
 
