--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dylanvanrooyen.com/">
     <meta property="og:title" content="Dylan van Rooyen - Portfolio">
-    <meta property="og:description" content="Explore the projects and skills of Dylan van Rooyen, a passionate developer specializing in web technologies, Python, and data analysis.">
+    <meta property="og:description" content="Explore the projects and skills of Dylan van Rooyen, a passionate developer specializing in web technologies, Python, JavaScript, Kotlin, and data analysis.">
     <meta property="og:image" content="https://dylanvanrooyen.com/assets/images/favicon.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://dylanvanrooyen.com/">
     <meta property="twitter:title" content="Dylan van Rooyen - Developer Portfolio">
-    <meta property="twitter:description" content="Explore the projects and skills of Dylan van Rooyen, a passionate developer specializing in web technologies, Python, and data analysis.">
+    <meta property="twitter:description" content="Explore the projects and skills of Dylan van Rooyen, a passionate developer specializing in web technologies, Python, JavaScript, Kotlin, and data analysis.">
     <meta property="twitter:image" content="https://dylanvanrooyen.com/assets/images/favicon.png">
     <link rel="icon" href="assets/images/favicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
